--- a/chrome-extension/popup/popup.html
+++ b/chrome-extension/popup/popup.html
@@ -79,7 +79,10 @@
         </div>
       </div>
       
-      <button type="submit" id="save-btn" class="save-btn">Save to Notion</button>
+      <div class="button-group">
+        <button type="button" id="open-btn" class="open-btn" disabled>Open on Notion</button>
+        <button type="submit" id="save-btn" class="save-btn">Save to Notion</button>
+      </div>
     </form>
     
     <div id="error" class="error"></div>
