--- a/packages/chrome-extension/popup/popup.html
+++ b/packages/chrome-extension/popup/popup.html
@@ -79,6 +79,14 @@
         </div>
       </div>
       
+      <!-- LinkedIn Save Checkbox -->
+      <div class="form-group">
+        <label class="checkbox-label">
+          <input type="checkbox" id="save-to-linkedin" checked>
+          <span>Also save on LinkedIn</span>
+        </label>
+      </div>
+      
       <div class="button-group">
         <button type="button" id="open-btn" class="open-btn" disabled>Open on Notion</button>
         <button type="submit" id="save-btn" class="save-btn">Save to Notion</button>
